# bjj-classifier

./: pyproject.toml  upload.sh
frontend/: README.md  package-lock.json
frontend/src/: App.tsx
frontend/src/components/: ClassificationResult.tsx  LoadingSpinner.tsx  VideoUploader.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts
model/: model.py
research/: Untitled-checkpoint.ipynb  bjj_single_video_llm_prototype.ipynb  embedding_research.ipynb  predict_functions.ipynb
server/: README.md  server.py
specs/: bjj_api_v1 copy.md  bjj_api_v1.md
