[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bjj-classifier"
version = "1.0.0"
description = "BJJ technique classifier API"
authors = [{name = "BJJ Classifier Team"}]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.5.0",
    "uvicorn[standard]>=0.24.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pytorchvideo>=0.1.5",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]